--- a/atividade_formulario.html
+++ b/atividade_formulario.html
@@ -11,7 +11,7 @@
 <body>
     <main>
     <form action="">
-        <!-- Digite seu nome aqui -->
+        <!-- Digite seu nome aqui --->
         <label for="nome">Nome</label> <br>
         <input placeholder="Digite seu nome aqui..." id="nome" type="text" required="true"><br>
         <!-- Digite seu email aqui -->
